give the pre a min-height so it doesn't overflow bar (bug 655806)

--- a/media/css/zamboni/files.css
+++ b/media/css/zamboni/files.css
@@ -38,6 +38,7 @@ span.number {
 
 pre {
     overflow-x: auto;
+    min-height: 200px;
 }
 
 pre.wrapped {
